# cogvrs

./: .gitignore  ACTUAL_SYSTEM_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  COGNITIVE_THEORETICAL_FRAMEWORK.md  COGVRS_TECHNICAL_ARCHITECTURE.md  DEPLOYMENT_REPORT.md  DEVELOPMENT.md  FINAL_USAGE_GUIDE.md  FIX_COMPLETION_REPORT.md  MULTI_SCALE_VISUALIZATION_IMPLEMENTATION.md  OBSERVATION_GUIDE.md  PROJECT_STATUS.md  README.md  RELEASE_GUIDE.md  RELEASE_NOTES.md  STATUS_OUTPUT_README.md  SYSTEM_DEEP_DIVE.md  TRIBAL_EXPANSION_DESIGN.md  USAGE.md  analysis_report.md  demo_output.py  index.html  pyproject.toml  requirements.txt  run_cogvrs.py  run_cogvrs_detailed.py  run_cogvrs_enhanced.py  run_simple.py  setup_environment.sh  simple_status.py  system_improvements_report.md  test_fixes.py  数字宇宙实验室_项目计划书.md
cogvrs_core/: __init__.py  main.py
cogvrs_core/agents/: __init__.py  behavior.py  memory.py  neural_brain.py  simple_agent.py
cogvrs_core/civilization/: __init__.py  technology_system.py  tribe_formation.py  tribe_manager.py
cogvrs_core/configs/: settings.py
cogvrs_core/consciousness/: consciousness_system.py
cogvrs_core/core/: __init__.py  physics_engine.py  time_manager.py  world.py
cogvrs_core/environment/: __init__.py  climate_system.py  environment_manager.py  terrain_system.py  weather_system.py
cogvrs_core/integration/: system_integration.py
cogvrs_core/skills/: skill_system.py
cogvrs_core/utils/: cli_config.py  event_logger.py  startup_dialog.py  system_reporter.py
cogvrs_core/visualization/: __init__.py  gui.py  optimized_gui.py  world_view.py
cogvrs_core/visualization/multi_scale/: __init__.py  camera_system.py  interaction_controller.py  lod_renderer.py  rendering_pipeline.py  scale_manager.py  scale_renderers.py
reports/: cogvrs_report_20250706_015643.html  cogvrs_report_20250706_015808.html  cogvrs_report_20250706_020917.html
